# show_bgs

./: Cargo.toml  Exioce.json  Makefile  example.json  faction_oom.json  history.json  systems.json
doc/: kodeblox_elite_bgs_api-docs.json  kodeblox_elite_eddb_api-docs.json
src/: calculate.rs  data.rs  ebgsv4.rs  eddbv3.rs  fetch.rs  fetch_fact.rs  lib.rs  main.rs  webdata.rs  webpage.rs
src/extdata/: ebgsv4.rs  eddbv3.rs  mod.rs
template/: index.tera
template/data/: bootstrap-dark.css  main.css
