[package]
name = "show_bgs"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]

[dependencies]
badlog = "1.0"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8"
tera = "0.10"
