[package]
name = "show_bgs"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]

[dependencies]
badlog = "1.1.1"
chrono = { version = "0.4.4", features = ["serde"] }
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.2"
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
reqwest = "0.8.6"
tera = "0.11.8"
# trace = "*"
