[package]
name = "show_bgs"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/andete/show_bgs"

[dependencies]
badlog = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8"
tera = "0.11"
